syntax = "proto3";

package user_v1;

option go_package="github.com/illabb13/users_auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message UserInfo {
  string username = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  string role = 5;
}

message QueryInfo {
  string username = 1;
}

message CreateRequest {
  UserInfo user = 1;
}

message CreateResponse {}

message DeleteRequest {
  QueryInfo query = 1;
}

message DeleteResponse {}
